--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "scripts": {
     "test": "jest --verbose --coverage",
     "test:watch": "npm runtest -- --watchAll",
-    "lint": "eslint '**/*.js'"
+    "lint": "eslint '**/*.js'",
+    "start:watch": "nodemon server.js"
   },
   "jest": {
     "testEnvironment": "node"
-  }, 
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tess-jl/exploring-models-lab.git"
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.23",
     "eslint": "^6.7.2",
+    "nodemon": "^2.0.1",
     "supertest": "^4.0.2"
   },
   "dependencies": {
