--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "jest --verbose --coverage",
-    "test:watch": "npm runtest -- --watchAll",
+    "test:watch": "npm run test -- --watchAll",
     "lint": "eslint '**/*.js'",
     "start:watch": "nodemon server.js"
   },
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.23",
     "eslint": "^6.7.2",
+    "jest": "^24.9.0",
     "nodemon": "^2.0.1",
     "supertest": "^4.0.2"
   },
